--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@webpack-blocks/elm",
-  "version": "1.0.0-rc",
+  "version": "1.0.0",
   "description": "Webpack block for elm.",
   "main": "lib/index",
   "license": "MIT",
@@ -21,9 +21,9 @@
   "dependencies": {
     "elm": "^0.18.0",
     "elm-hot-loader": "^0.5.4",
-    "elm-webpack-loader": "^4.3.1"
+    "elm-webpack-loader": "^4.5.0"
   },
   "devDependencies": {
-    "@webpack-blocks/core": "^1.0.0-rc"
+    "@webpack-blocks/core": "^1.0.0"
   }
 }
