--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,7 @@ node_js:
 cache:
   directories:
     - $HOME/.npm
+install:
+  - printf "#\041/bin/bash\n\necho \"Running elm-make with sysconfcpus -n 2\"\n\n$TRAVIS_BUILD_DIR/sysconfcpus/bin/sysconfcpus -n 2 elm-make-old \"\$@\"" > $(npm config get prefix)/bin/elm-make
+  - chmod +x $(npm config get prefix)/bin/elm-make
+  - npm install
